--- a/Assets/WebGLTemplates/AgoraTemplate/index.html
+++ b/Assets/WebGLTemplates/AgoraTemplate/index.html
@@ -24,6 +24,8 @@
 	<script src="AgoraWebSDK/libs/agorautils.js"></script>
 	<script src="AgoraWebSDK/libs/audiomixing.js"></script>
 	<script src="AgoraWebSDK/agorartcenginev2.js"></script>
+	<script src="AgoraWebSDK/libsv4/clientManagerV4.js"></script>
+	<script src="AgoraWebSDK/agorartcenginev4.js"></script>
 	<script src="AgoraRTC_N.js"></script>
 	<script src="AgoraWebSDK/libs/spatial-audio-main.js" type="module"></script>
 
